--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,9 +20,10 @@
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23" />
+        app:layout_constraintVertical_bias="0.186" />
 
     <TextView
         android:id="@+id/textView2"
@@ -37,7 +38,7 @@
         app:layout_constraintVertical_bias="0.331" />
 
     <EditText
-        android:id="@+id/fullName"
+        android:id="@+id/firstName"
         android:layout_width="366dp"
         android:layout_height="50dp"
         android:ems="10"
